--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,32 @@
     <string name="no_account">No account yet? Create one</string>
     <string name="or">or</string>
     <string name="re_password">Re-enter password</string>
-    <string name="password">Password</string>
+    <string name="already_a_member">Already a member? Login!</string>
+    <string name="ustawienia">Ustawienia</string>
+    <string name="tworca">Twórca</string>
+    <string name="open_drawer">open drawer</string>
+    <string name="close_drawer">close drawer</string>
+    <string name="nav_header_desc">nav_header_desc</string>
+    <string name="nav_header_title">Traveller</string>
+    <string name="nav_header_username">nav_header_subtitle</string>
+    <string name="log_out">Log out</string>
+    <string name="tab">\u0009</string>
+    <string name="menu">Menu</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <string name="google_maps_key">AIzaSyAfGoF9YliSCVlIBi3pSshQpDpb10uD0WM</string>
 </resources>
