--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,40 +1,39 @@
 <resources>
     <string name="app_name">traveller</string>
-    <string name="title_activity_login">Sign in</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="email">Email</string>
-    <string name="toLogin">Already a member? Login</string>
-    <string name="register">Register</string>
-    <string name="displayName">Name</string>
-    <string name="phone_number">Phone number (optional)</string>
-    <string name="login">Login</string>
-    <string name="password">Password</string>
-    <string name="no_account">No account yet? Create one</string>
-    <string name="or">or</string>
-    <string name="re_password">Re-enter password</string>
-    <string name="already_a_member">Already a member? Login!</string>
+    <string name="title_activity_login">Zaloguj się</string>
+    <string name="prompt_email">E-mail</string>
+    <string name="prompt_password">Hasło</string>
+    <string name="action_sign_in">Zaloguj się lub zarejestruj</string>
+    <string name="action_sign_in_short">Zaloguj się</string>
+    <string name="welcome">"Witaj!"</string>
+    <string name="invalid_username">Nazwa użytkownika jest niepoprawna</string>
+    <string name="invalid_password">Hasło musi zawierać co najmniej 6 znaków</string>
+    <string name="login_failed">"Logowanie nieudane"</string>
+    <string name="email">E-mail</string>
+    <string name="toLogin">Masz już konto? Zaloguj się!</string>
+    <string name="register">Rejestracja</string>
+    <string name="displayName">Wyświetlana nazwa</string>
+    <string name="login">Logowanie</string>
+    <string name="password">Hasło</string>
+    <string name="no_account">Nie masz konta? Załóź nowe!</string>
+    <string name="or">lub</string>
+    <string name="re_password">Powtórz hasło</string>
+    <string name="already_a_member">Masz już konto? Zaloguj się!</string>
     <string name="ustawienia">Ustawienia</string>
     <string name="tworca">Twórca</string>
-    <string name="open_drawer">open drawer</string>
-    <string name="close_drawer">close drawer</string>
+    <string name="open_drawer">Otwórz menu boczne</string>
+    <string name="close_drawer">Zamknij menu boczne</string>
     <string name="nav_header_desc">nav_header_desc</string>
     <string name="nav_header_title">Traveller</string>
     <string name="nav_header_username">nav_header_subtitle</string>
-    <string name="log_out">Log out</string>
+    <string name="log_out">Wyloguj się</string>
     <string name="tab">\u0009</string>
     <string name="menu">Menu</string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
+    <string name="messages_header">Wiadomości</string>
+    <string name="sync_header">Synchronizacja</string>
 
     <!-- Messages Preferences -->
     <string name="signature_title">Your signature</string>
