--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name="list">Lista</string>
     <string name="participants">Uczestnicy</string>
     <string name="click_back_again_to_exit">Please click BACK again to exit</string>
+    <string name="type_a_messeage">Wiadomość...</string>
 
     <string-array name="intervals">
         <item>"1 sekunda"</item>
