Dodanie fragmentu do wyświetlania listy miejsc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="travel_mode">Sposób podróżowania</string>
     <string name="driving">Samochodem</string>
     <string name="walking">Pieszo</string>
+    <string name="type">Typ</string>
 
 
 </resources>
