Dodanie filtrowania miejsc po typie i po wpisanym tekście Dodanie fragmentu który będzie wyświetlał szczegóły miejsca

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,5 +123,106 @@
     <string name="walking">Pieszo</string>
     <string name="type">Typ</string>
 
+<!--    google place types-->
+    <string name="accounting">księgowość</string>
+    <string name="airport">port lotniczy</string>
+    <string name="amusement_park">park rozrywki</string>
+    <string name="aquarium">akwarium</string>
+    <string name="art_gallery">galeria sztuki</string>
+    <string name="atm">bankomat</string>
+    <string name="bakery">piekarnia</string>
+    <string name="bank">bank</string>
+    <string name="bar">knajpa</string>
+    <string name="beauty_salon">salon piękności</string>
+    <string name="bicycle_store">sklep rowerowy</string>
+    <string name="book_store">księgarnia</string>
+    <string name="bowling_alley">kręgielnia</string>
+    <string name="bus_station">dworzec autobusowy</string>
+    <string name="cafe">kawiarnia</string>
+    <string name="campground">kemping</string>
+    <string name="car_dealer">dealer samochodowy</string>
+    <string name="car_rental">wynajem samochodów</string>
+    <string name="car_repair">naprawa samochodów</string>
+    <string name="car_wash">myjnia</string>
+    <string name="casino">kasyno</string>
+    <string name="cemetery">cmentarz</string>
+    <string name="church">kościół</string>
+    <string name="city_hall">ratusz</string>
+    <string name="clothing_store">sklep z odzieżą</string>
+    <string name="convenience_store">sklep spożywczy</string>
+    <string name="courthouse">sąd</string>
+    <string name="dentist">stomatolog</string>
+    <string name="department_store">dom towarowy</string>
+    <string name="doctor">lekarz</string>
+    <string name="drugstore">drogeria</string>
+    <string name="electrician">elektryk</string>
+    <string name="electronics_store">sklep elektroniczny</string>
+    <string name="embassy">ambasada</string>
+    <string name="fire_station">remiza strażacka</string>
+    <string name="florist">kwiaciarnia</string>
+    <string name="funeral_home">dom pogrzebowy</string>
+    <string name="furniture_store">sklep meblowy</string>
+    <string name="gas_station">stacja paliw</string>
+    <string name="grocery_or_supermarket">supermarket</string>
+    <string name="gym">siłownia</string>
+    <string name="hair_care">fryjer</string>
+    <string name="hardware_store">sklep z narzędziami</string>
+    <string name="hindu_temple">świątynia hinduska</string>
+    <string name="home_goods_store">sklep z wyrobami własnymi</string>
+    <string name="hospital">szpital</string>
+    <string name="insurance_agency">agencja ubezpieczeniowa</string>
+    <string name="jewelry_store">sklep jubilerski</string>
+    <string name="laundry">pralnia</string>
+    <string name="lawyer">prawnik</string>
+    <string name="library">biblioteka</string>
+    <string name="light_rail_station">stacja kolejki miejskiej</string>
+    <string name="liquor_store">monopolowy</string>
+    <string name="local_government_office">biuro samorządu terytorialnego</string>
+    <string name="locksmith">ślusarz</string>
+    <string name="lodging">nocleg</string>
+    <string name="meal_delivery">sklep mięsny</string>
+    <string name="meal_takeaway">posiłek na wynos</string>
+    <string name="mosque">meczet</string>
+    <string name="movie_rental">wpożyczalnia filmów</string>
+    <string name="movie_theater">kino</string>
+    <string name="moving_company">firma przeprowadzkowa</string>
+    <string name="museum">muzeum</string>
+    <string name="night_club">klub nocny</string>
+    <string name="painter">malarz</string>
+    <string name="park">park</string>
+    <string name="parking">parking</string>
+    <string name="pet_store">sklep zoologiczny</string>
+    <string name="pharmacy">apteka</string>
+    <string name="physiotherapist">fizjoterapeuta</string>
+    <string name="plumber">hydraulik</string>
+    <string name="police">policja</string>
+    <string name="post_office">poczta</string>
+    <string name="primary_school">szkoła podstawowa</string>
+    <string name="real_estate_agency">agencja nieruchomości</string>
+    <string name="restaurant">restauracja</string>
+    <string name="roofing_contractor">wykonawca robót dekarskich</string>
+    <string name="rv_park">rv park</string>
+    <string name="school">szkoła</string>
+    <string name="secondary_school">szkoła średnia</string>
+    <string name="shoe_store">sklep z butami</string>
+    <string name="shopping_mall">centrum handlowe</string>
+    <string name="spa">sanatorium</string>
+    <string name="stadium">stadion</string>
+    <string name="storage">magazyn</string>
+    <string name="store">sklep</string>
+    <string name="subway_station">stacja metra</string>
+    <string name="supermarket">supermarket</string>
+    <string name="synagogue">synagoga</string>
+    <string name="taxi_stand">stanowisko taksówkowe</string>
+    <string name="tourist_attraction">atrakcja turystyczna</string>
+    <string name="train_station">stacja kolejowa</string>
+    <string name="travel_agency">biuro podróży</string>
+    <string name="university">uniwersytet</string>
+    <string name="veterinary_care">opieka weterynaryjna</string>
+    <string name="zoo">zoo</string>
+    <string name="food">Żywność</string>
+    <string name="filter_places">Filtruj</string>
+    <string name="places_types">Typy miejsc:</string>
+
 
 </resources>
