Dodanie clusterManager do grupowania miejsc w pobliżu na mapie Dodanie klasy renderującej widok do item w klastrze Poprawa błędów

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,6 +229,8 @@
     <string name="text_copied">Tekst został skopiowany</string>
     <string name="place_searching_result">Wyniki wyszukiwania miejsca</string>
     <string name="details">Szczegóły</string>
+    <string name="nearby_places_search_distance_preferences">Promień wyszukiwania miejsc w pobliżu</string>
+    <string name="must_be_in_meters">Wartość musi być podana w metrach</string>
 
 
 </resources>
