Optymalizacja kodu Poprawa paru drobnych błędów

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,6 +248,7 @@
     <string name="contact_author">Kontakt z autorem</string>
     <string name="thanks_to">Podziękowania</string>
     <string name="time">Czas</string>
+    <string name="point_of_interest">Punkt zainteresowania</string>
 
 
 </resources>
